# lgos3

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  TODO  configure  configure.ac  meson.build  save.sh
arch/: meson.build
arch/i386/: makefile.mk  meson-cross.txt  meson.build
arch/i386/emulator/: Makefile.am  Makefile.in  grub.img  makefile.mk  makefile.pre  mbr_hdd  meson.build  mkimg.sh  objcopy.sh
arch/i386/kernel/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  descript.c  descript.h  init.ld  init.s  initc.c  inits.s  kernel.ld  makefile.mk  makefile.pre  meson.build  multiboot.inc  paging.c  paging.h  types.h
arch/i386/loader/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  makefile.mk  meson.build
arch/i386/loader/bootblock/: Makefile  Makefile.am  Makefile.in  bootblock.inc  bootblock.ld  bootblock.s  bootblock_512.s  bootblock_ext2.ld  bootblock_ext2.s  bootblock_fat.ld  bootblock_fat.s  bootblock_mbr.ld  bootblock_mbr.s  disk.inc  disk.s  display.s  init.s  ins_disk.s  ins_init.s  ins_load.s  ins_misc.s  load.s  makefile.mk  makefile.pre  meson.build  misc.s  video.inc  video.s
arch/i386/loader/loader/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  console.c  console.h  disk.c  disk.h  elf.c  elf.h  ext2.c  ext2.h  fat.c  fat.h  init.h  init.s  lib.c  lib.h  loader.c  loader.ld  makefile.mk  makefile.pre  meson.build  multiboot.c  multiboot.h
arch/i386/qemu/: .gdbinit  Makefile  elf.awk  filefrag.awk  mkdisk.sh
arch/i386/qemu/grub/: grub_inst_fd.img  grub_inst_hd.img  stage2
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
lgos3-CMakeFiles/Platform/: lgos3.cmake
mkenv/: mkenv.sh
